examples/istio-subset/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: istio-rollout
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: istio-rollout
    spec:
      containers:
        - name: istio-rollout
          image: argoproj/rollouts-demo:green
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      # analysis will be performed in background, while rollout is progressing through its steps
      # analysis:
      #   startingStep: 1 # index of step list, of when to start this analysis
      #   templates:
      #     - templateName: istio-success-rate
      #   args: # arguments allow AnalysisTemplates to be re-used
      #     - name: service
      #       value: istio-rollout
      #     - name: namespace
      #       valueFrom:
      #         fieldRef:
      #           fieldPath: metadata.namespace
      canaryService: istio-rollout-canary
      trafficRouting:
        istio:
          virtualServices:
            - name: istio-rollout-vsvc
      # trafficRouting:
      #   istio:
      #     virtualService:
      #       name: istio-rollout-vsvc
      #       routes:
      #         - primary
      #     destinationRule:
      #       name: rollout-destrule # required
      #       canarySubsetName: canary # required
      #       stableSubsetName: stable # required
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: { duration: 10 }
        - setWeight: 60
        - pause: {}
        - setWeight: 80
        - pause: { duration: 10 }
