examples/istio-subset/nginx-gateway-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gateway-preview
  namespace: istio-system
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
    - host: istio-subset.canary.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
