examples/istio-subset/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-rollout-vsvc
spec:
  gateways:
    - istio-rollout-gateway
  hosts:
    - "*"
  #   - istio-rollout.apps.argoproj.io
  #   - istio-rollout.local
  #   - istio-subset.localhost
  http:
    - name: primary
      match:
        - headers:
            host:
              exact: "istio-subset.localhost"
      route:
        - destination:
            host: istio-rollout
            subset: stable # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
    - name: canary
      match:
        - headers:
            host:
              exact: "istio-subset.canary.localhost"
      route:
        - destination:
            host: istio-rollout-canary
            subset: canary # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
        #   weight: 100
        # - destination:
        #     host: istio-rollout-canary
        #     subset: canary # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
        #   weight: 0
